Activities: Jump to next activity if it's the current before removing one

If the activity to be deleted is the currently active, jump to the next accessible activity before performing the removal and avoid leaving plasmashell in a dangling state.

BUG: 521124